--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "content"]
-	path = content
+[submodule "src/content"]
+	path = src/content
 	url = https://github.com/austery/thought-foundry-content.git
